# writ

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  install.sh  node_modules  package.json  pnpm-lock.yaml  probe.mjs  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/scripts/: build_latest_json.py  bump_version.py
.github/workflows/: bump-version.yml  ci.yml  packages.yml  release.yml  site.yml
artifacts/: SHA256SUMS.txt  latest.json
crates/writ-cli/: Cargo.toml
crates/writ-core/: Cargo.toml
crates/writ-core/src/: default_app.rs  errors.rs  file_ops.rs  inbox.rs  lib.rs  polish.rs  recovery.rs  search.rs
crates/writ-core/src/buffer/: document.rs  manager.rs  mod.rs
crates/writ-core/src/command/: mod.rs  registry.rs
crates/writ-core/src/config/: ai.rs  keybinding.rs  mod.rs  preview.rs  spelling.rs
crates/writ-core/src/events/: bus.rs  mod.rs
crates/writ-core/src/history/: mod.rs  operations.rs
crates/writ-core/src/hotkey/: mod.rs
crates/writ-core/src/preview/: mod.rs  protocol.rs  registry.rs  types.rs
crates/writ-core/src/prompt/: estimate.rs  mod.rs  placeholder.rs  strip.rs
crates/writ-core/src/update/: auto_check.rs  mod.rs
crates/writ-core/src/watcher/: change_event.rs  conflict.rs  ignore.rs  mod.rs
crates/writ-core/src/workspace/: file_search.rs  mod.rs
crates/writ-core/tests/: arg_paths_tests.rs  buffer_tests.rs  config_tests.rs  conflict_tests.rs  events_tests.rs  file_ops_tests.rs  hotkey_tests.rs  ignore_stamps_tests.rs  preview_url_parser_property.rs  prompt_tests.rs  update_tests.rs
crates/writ-lint/: Cargo.toml
crates/writ-lint/src/: lib.rs  tests.rs
crates/writ-plugin/: Cargo.toml
crates/writ-plugin/benches/: transforms.rs
crates/writ-plugin/src/: api.rs  lib.rs  manifest.rs
crates/writ-plugin/src/transform/: composite.rs  error.rs  metadata.rs  mod.rs  registry.rs
crates/writ-plugin/src/transform/builtins/: dedent.rs  ensure_final_newline.rs  fix_punctuation_spacing.rs  mod.rs  normalize_whitespace.rs  prepare_prompt.rs  smart_to_straight_quotes.rs  tidy_whitespace.rs  trim_leading_whitespace.rs  trim_trailing_whitespace.rs
crates/writ-plugin/tests/: builtin_perf_tests.rs  builtin_transforms_tests.rs  composite_tests.rs  manifest_tests.rs  perf_budget.rs  transform_registry_tests.rs
crates/writ-render/: Cargo.toml
crates/writ-render/src/: lib.rs  wasm.rs
crates/writ-storage/: Cargo.toml
crates/writ-storage/benches/: storage.rs
crates/writ-storage/migrations/: 001_initial.sql  010_layout_state.sql  020_buffer_open_mode.sql  030_fts_prefix.sql
crates/writ-storage/src/: atomic.rs  buffer_store.rs  config_store.rs  consistency.rs  errors.rs  fts.rs  inbox_store.rs  layout_state.rs  lib.rs  workspace_grep.rs  workspace_search.rs  workspace_store.rs
crates/writ-storage/src/database/: connection.rs  migrations.rs  mod.rs  queries.rs
crates/writ-storage/src/recovery/: dirty_shutdown.rs  mod.rs  snapshot.rs
crates/writ-storage/tests/: atomic_writes_tests.rs  buffer_store_tests.rs  config_store_tests.rs  consistency_tests.rs  database_tests.rs  file_open_tests.rs  fts_tests.rs  integration_test.rs  layout_state_tests.rs  perf_budget.rs  recovery_tests.rs  recovery_unwired_contract.rs
docs/: ARCHITECTURE.md  RELEASING.md  perf-budgets.md
docs/adr/: 001-tauri-over-electron.md  002-solidjs-over-react.md  003-codemirror-over-monaco.md  004-sqlite-over-flat-files.md  005-cargo-workspace-split.md  006-plugin-runtime-v1.md  007-in-app-updater.md  008-typography-tokens.md  009-preview-surface.md  010-workspace-primitive.md  011-preview-trust-model.md  012-composite-transforms.md  012-editor-search-controller.md  013-editor-search-controller.md  014-live-markdown-typography.md  015-prompt-workbench.md  016-workspace-folders.md  017-command-line-surface.md  (+9 more)
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/preview_url_parser/: bad_encoding_nonhex  bad_encoding_short  empty_scope  leading_double_slash  no_authority  nul_byte  scheme_case  seed_chrome_css  seed_document_buf  seed_document_nested  seed_document_query  trav_backslash  trav_dotdot  trav_dotdot_deep  trav_double_encoded  trav_encoded  trav_encoded_upper  unknown_scope  windows_drive  wrong_scheme  wrong_scheme_workspace
fuzz/fuzz_targets/: preview_url_parser.rs
packaging/: README.md
scripts/: build-mac-pkg.sh  dev-instance.sh  launch-public.sh  packaging_bump_aur.py  packaging_bump_homebrew.py  packaging_bump_winget.py  perf-gate.sh  release-preflight.sh  triage-dependabot.sh
site/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
src/: App.css  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: preview-base.css
src-tauri/assets/preview/: bridge.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fts_scheduler.rs  lib.rs  main.rs  poison.rs  startup.rs  state.rs  window_state.rs  workspace_index.rs
src-tauri/src/commands/: ai.rs  buffer.rs  cli.rs  config.rs  default_app.rs  file.rs  history.rs  inbox.rs  mod.rs  perf.rs  preview.rs  prompt.rs  recovery.rs  spelling.rs  storage.rs  transforms.rs  update.rs  window.rs  workspace.rs
src-tauri/src/events/: bus_bridge.rs  emitter.rs  mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/logging/: mod.rs  panic_handler.rs
src-tauri/src/preview/: csp.rs  csp_eval.rs  handler.rs  mod.rs  protocol.rs  webview_manager.rs  window_manager.rs
src-tauri/src/preview/renderers/: html.rs  katex.rs  markdown.rs  mermaid.rs  mod.rs  theme.rs
src-tauri/src/security/: authorized_paths.rs  mod.rs
src-tauri/src/watcher/: handler.rs
src-tauri/tests/: buffer_guard_tests.rs  cli_symlink_tests.rs  inbox_tests.rs  open_file_origin_gate_tests.rs  preview_security.rs  transforms_ipc_tests.rs  workspace_search_tests.rs  workspace_tests.rs
(+408 files in other folders)
