[workspace]
members = [
    "crates/writ-core",
    "crates/writ-storage",
    "crates/writ-plugin",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0-rc.1"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/ibrahemid/writ"
homepage = "https://github.com/ibrahemid/writ"
authors = ["Ibrahem ID <ibrahemid@gmail.com>"]
description = "A lightweight, always-ready text editor for developers."
readme = "README.md"
keywords = ["editor", "tauri", "scratchpad", "codemirror", "notes"]
categories = ["text-editors", "gui"]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
