[workspace]
members = [
    "crates/writ-core",
    "crates/writ-storage",
    "crates/writ-plugin",
    "src-tauri",
]
# The fuzz crate is its own workspace (needs nightly + libfuzzer); keep it
# out of the merge-gate build so `cargo build/test --workspace` never pulls
# in libfuzzer or the nightly toolchain.
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0-2"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/ibrahemid/writ"
homepage = "https://github.com/ibrahemid/writ"
authors = ["Ibrahem ID <ibrahemid@gmail.com>"]
description = "A lightweight, always-ready text editor for developers."
readme = "README.md"
keywords = ["editor", "tauri", "scratchpad", "codemirror", "notes"]
categories = ["text-editors", "gui"]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
