[workspace]
members = [
    "crates/writ-core",
    "crates/writ-storage",
    "crates/writ-plugin",
    "src-tauri",
]
# The fuzz crate is its own workspace (needs nightly + libfuzzer); keep it
# out of the merge-gate build so `cargo build/test --workspace` never pulls
# in libfuzzer or the nightly toolchain.
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0-2"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/ibrahemid/writ"
homepage = "https://github.com/ibrahemid/writ"
authors = ["Ibrahem ID <ibrahemid@gmail.com>"]
description = "A lightweight, always-ready text editor for developers."
readme = "README.md"
keywords = ["editor", "tauri", "scratchpad", "codemirror", "notes"]
categories = ["text-editors", "gui"]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

# wry 0.54.4 panics on macOS: collect_paths() unwraps a nil propertyListForType
# read that AppKit returns for some drag/trackpad gestures, crashing the app on
# drop (Writ #113). No 0.54.x release carries the fix and tauri-runtime-wry
# 2.10.1 pins wry "^0.54.0", so a version bump is impossible without churning
# tauri itself. This pins a one-commit fork of wry-v0.54.4 whose only change is a
# nil-safe let-else in src/wkwebview/drag_drop.rs.
#   fork:   https://github.com/ibrahemid/wry/tree/fix/dragdrop-nil-pasteboard
#   diff:   wry-v0.54.4..4c8372657c0516b48c01fa7f05b826b9095ce315 (4 lines)
# DROP THIS PATCH once a tauri/wry bump ships the nil-safe read upstream (wry
# >= 0.55 carries it); re-pin or delete and run `cargo update -p wry`.
[patch.crates-io]
wry = { git = "https://github.com/ibrahemid/wry.git", rev = "4c8372657c0516b48c01fa7f05b826b9095ce315" }
