[package]
name = "writ-tauri"
description = "Tauri application shell and IPC adapter for the Writ editor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
name = "writ_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
writ-core = { path = "../crates/writ-core" }
writ-render = { path = "../crates/writ-render" }
writ-storage = { path = "../crates/writ-storage", features = ["bundled"] }
writ-plugin = { path = "../crates/writ-plugin" }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
notify = "7"
notify-debouncer-mini = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
thiserror = "2"
url = "2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"
