[package]
name = "writ-core"
description = "Pure Rust domain logic for the Writ editor: buffers, config, events, and conflict policy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
sha2 = "0.10"

[dev-dependencies]
toml = "0.8"
tempfile = "3"
