[package]
name = "writ-lint"
description = "Local spell-check and mechanical-writing engine for the Writ editor, built on Harper."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
writ-core = { path = "../writ-core" }
harper-core = "2.5"
serde = { version = "1", features = ["derive"] }
