[package]
name = "writ-lint"
description = "Local spell-check and mechanical-writing engine for the Writ editor, built on Harper."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# default-features off drops the `thesaurus` feature (harper-thesaurus + zstd +
# zip): Writ only runs spell check and mechanical rules, never synonym lookup.
# The POS tagger (harper-brill) is a mandatory harper-core dependency and cannot
# be excluded.
writ-core = { path = "../writ-core" }
harper-core = { version = "2.5", default-features = false }
serde = { version = "1", features = ["derive"] }
