[package]
name = "writ-plugin"
description = "Plugin manifest types and extension boundary for the Writ editor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
writ-core = { path = "../writ-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
toml = "0.8"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "transforms"
harness = false
