[package]
name = "writ-storage"
description = "SQLite-backed persistence and FTS5 search for the Writ editor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
writ-core = { path = "../writ-core" }
rusqlite = { version = "0.31" }
toml = "0.8"
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

[features]
bundled = ["rusqlite/bundled"]

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
writ-core = { path = "../writ-core" }
chrono = { version = "0.4", features = ["serde"] }

[[bench]]
name = "storage"
harness = false
